[workspace]
members=["compiler", "lsp", "stream"]
workspace.resolver = "2"

[workspace.dependencies]
chumsky = "0.7.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
fxhash = "0.2.1"
tower-lsp="0.16.0"
env_logger = "0.9.0"
ropey = "1.6.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
stream = { path="./stream"}
